--- a/business-intelligence/bi-tools.html
+++ b/business-intelligence/bi-tools.html
@@ -1,4 +1,25 @@
-                        <h3>Foundational Components of Modern BI Architectures</h3>
+
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>BI Tools and Technology | Business Intelligence</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="../assets/css/main.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    </head>
+    <body class="is-preload">
+        <div id="wrapper">
+            <div id="main">
+                <section>
+                    <div class="container">
+                        <header class="major">
+                            <h2>Evolution of Business Intelligence Tools and Technology</h2>
+                        </header>
+                        <div class="content">
+                            <p>The contemporary business intelligence landscape has undergone radical transformation through integration of artificial intelligence, advanced analytics, and robust data management frameworks. According to Gartner's 2023 Magic Quadrant, the BI landscape has evolved significantly with a 47% acceleration in BI platform capabilities compared to 2020 benchmarks, particularly in automated machine learning integration and real-time analytics.</p>
+                            
+                          <h3>Foundational Components of Modern BI Architectures</h3>
                         
                         <h4>Integrated Data Visualization Ecosystems</h4>
                         <p>Contemporary visualization platforms have evolved into comprehensive analytical environments:</p>
@@ -162,6 +183,7 @@
     <script src="../assets/js/main.js"></script>
 </body>
 
+</html>
 
 
 
