--- a/business-intelligence/performance-management.html
+++ b/business-intelligence/performance-management.html
@@ -22,22 +22,22 @@
                          <h3>AI-Driven Performance Management</h3>
 
                         <h4>Data Automation and Analysis</h4>
-                        <p>Modern performance measurement systems employ AI to automate data collection and analysis, significantly improving the quality and efficiency of performance management processes. AI quickly sifts through vast amounts of data, identifies patterns, and delivers actionable insights, ensuring more accurate and objective analysis free from human bias[3].</p>
+                        <p>Modern performance measurement systems employ AI to automate data collection and analysis, significantly improving the quality and efficiency of performance management processes. AI quickly sifts through vast amounts of data, identifies patterns, and delivers actionable insights, ensuring more accurate and objective analysis free from human bias.</p>
 
-                        <p>AI-powered performance management tools can generate comprehensive performance reports automatically, eliminating the need for HR personnel to spend hours compiling data. This results in detailed, consistent, and accurate reports that provide a holistic view of an employee's performance[3].</p>
+                        <p>AI-powered performance management tools can generate comprehensive performance reports automatically, eliminating the need for HR personnel to spend hours compiling data. This results in detailed, consistent, and accurate reports that provide a holistic view of an employee's performance.</p>
 
                         <h4>Goal Setting and Analysis</h4>
-                        <p>AI-assisted performance management tools conduct in-depth analyses of an employee's historical goals, including targets hit, areas of improvement, and reasons for performance changes. This allows HR managers to track employee OKRs more realistically and provide relevant feedback that accounts for the employee's abilities and goals in real time[3].</p>
+                        <p>AI-assisted performance management tools conduct in-depth analyses of an employee's historical goals, including targets hit, areas of improvement, and reasons for performance changes. This allows HR managers to track employee OKRs more realistically and provide relevant feedback that accounts for the employee's abilities and goals in real time.</p>
 
                         <h3>Continuous Feedback and Development</h3>
 
                         <h4>AI Coaching</h4>
-                        <p>AI-powered coaching provides personalized, scalable, and cost-effective support. Instead of a one-size-fits-all approach, AI coaching engages employees in structured conversations that align with both individual needs and broader strategic initiatives. It creates a psychologically safe space for employees to reflect on changes, whether it's AI adoption, digital transformation, or cultural shifts[2].</p>
+                        <p>AI-powered coaching provides personalized, scalable, and cost-effective support. Instead of a one-size-fits-all approach, AI coaching engages employees in structured conversations that align with both individual needs and broader strategic initiatives. It creates a psychologically safe space for employees to reflect on changes, whether it's AI adoption, digital transformation, or cultural shifts.</p>
 
-                        <p>Research published by Dr. Nicky Terblanche in 2022 shows that AI coaching can be just as effective as human coaching in helping people navigate change. This makes coaching accessible at scale, unlocking change readiness across the organization[2].</p>
+                        <p>Research published by Dr. Nicky Terblanche in 2022 shows that AI coaching can be just as effective as human coaching in helping people navigate change. This makes coaching accessible at scale, unlocking change readiness across the organization.</p>
 
                         <h4>Targeted Training</h4>
-                        <p>AI simplifies the process of identifying specific training needs for each employee by analyzing performance data and identifying areas where an employee may need additional training or development. This targeted approach ensures that each employee receives the training resources they need to improve their performance and reach their full potential[3].</p>
+                        <p>AI simplifies the process of identifying specific training needs for each employee by analyzing performance data and identifying areas where an employee may need additional training or development. This targeted approach ensures that each employee receives the training resources they need to improve their performance and reach their full potential.</p>
 
                         <pre><code class="language-python">
 Example of AI-enhanced performance coaching system
@@ -57,9 +57,9 @@ return generate_coaching_report(sentiment, facial_cues)
                         <h3>Emotion Recognition in Learning Environments</h3>
 
                         <h4>Affective Computing in Education</h4>
-                        <p>Recent research has shown that integrating affective computing with artificial intelligence can enhance e-learning applications by detecting and responding to the emotions of learners, potentially improving the learning process. It can adjust the mood of learners to create a more effective learning environment, recognize emotions from speech using neural networks, and monitor students' behavior to gauge their attention and engagement levels[4].</p>
+                        <p>Recent research has shown that integrating affective computing with artificial intelligence can enhance e-learning applications by detecting and responding to the emotions of learners, potentially improving the learning process. It can adjust the mood of learners to create a more effective learning environment, recognize emotions from speech using neural networks, and monitor students' behavior to gauge their attention and engagement levels.</p>
 
-                        <p>In educational settings, when integrated with artificial intelligence, affective computing can personalize teaching by adapting content to align with students' emotions and individual needs. This capability not only facilitates the personalized adaptation of educational content but also enables the early identification of potential emotional challenges that may impact academic performance[4].</p>
+                        <p>In educational settings, when integrated with artificial intelligence, affective computing can personalize teaching by adapting content to align with students' emotions and individual needs. This capability not only facilitates the personalized adaptation of educational content but also enables the early identification of potential emotional challenges that may impact academic performance.</p>
 
                     </div>
                     <footer>
